# Parallel-Programming

./: .gitignore
Euler_number/: main.c
Euler_number/one_thread/: a.out
First-Semester/Lab1/: equation.c  equation.h  graph.py
First-Semester/Lab2/: README.md  integral.h  integral_multithreaded.c  integral_singlethreaded.c  main.c  solve.sh  utils.c  utils.h
First-Semester/Parallel_sorting/: data_generators.c  data_generators.h  merge.c  merge.h  times
Lab1/: README.md  equation.c  equation.h  graph.py  solve_n_plot.sh
Lab1/multi_thread/: main.c
Lab1/one_thread/: main.c
Lab2/: solve.sh
Parallel_sorting/: main.c  solve_n_run.sh  times
Parallel_sorting/multi_thread/: main  plots.py
Parallel_sorting/one_thread/: main.c
Second-Semester/Array-Access/: README.md  generate_data.sh  generate_data_file.c  main.c
Second-Semester/Hello-World/: CMakeLists.txt  README.md  build.sh  main.c
Second-Semester/Lab 1/: README.md  build.sh  generate_result.sh  graphs.ods  main.c  plot.py  run.sh  sequential_main.c
Second-Semester/Matrices/: CMakeLists.txt  README.md  build.sh  gather_data.py  generate_data.sh  generate_matrices.c  main.c  matrix.c  matrix.h  run.sh
Second-Semester/Prime-Numbers/: CMakeLists.txt  README.md  build.sh  generate_data.sh  generate_prime_numbers.c  main.c
Second-Semester/Series-Sum/: README.md  arcsin.c  build.sh  main.c
Second-Semester/Sum-Of-Numbers/: README.md  main.c
Second-Semester/Task 1/: CMakeLists.txt  README.md  run.sh
Second-Semester/Task 2/: CMakeLists.txt  README.md  main.c
Second-Semester/Task 3/: CMakeLists.txt  (+6 more)
(+34 files in other folders)
